Added hotkey for closing program, Better select, Removed console logs

--- a/src/main.html
+++ b/src/main.html
@@ -11,6 +11,7 @@
 <body>
   <div id="main">
     <select id="select">
+      <option value="select">Select an option</option>
     </select>
     <video id="output" ></video>
   </div>
